<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">,</string>
    <string name="_ac">AC</string>
    <string name="_delete">⌫</string>
    <string name="_percent">%</string>
    <string name="_division">÷</string>
    <string name="_multiplication">×</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_result">=</string>
    <string name="button_setting">setting</string>
    <string name="header_setting">Setting</string>
    <string name="color_theme">Color theme</string>
    <string name="white_theme">White theme</string>
    <string name="_run_app">Run App</string>
    <string name="black_theme">Black theme</string>
</resources>