<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        style="@style/TableLayout">

        <TableRow
            style="@style/TableRow">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/table"
                style="@style/Table"/>

        </TableRow>

        <TableRow
            style="@style/TableRow">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ac"
                android:text="@string/_ac"
                android:layout_span="3"
                style="@style/Button_1"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_division"
                android:text="@string/_division"
                style="@style/Button_3"/>

        </TableRow>


    <TableRow
        style="@style/TableRow">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            android:text="@string/_1"
            style="@style/Button_2"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            android:text="@string/_2"
            style="@style/Button_2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            android:text="@string/_3"
            style="@style/Button_2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiplication"
            android:text="@string/_multiplication"
            style="@style/Button_3"/>

    </TableRow>

    <TableRow
        style="@style/TableRow">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            android:text="@string/_4"
            style="@style/Button_2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            android:text="@string/_5"
            style="@style/Button_2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            android:text="@string/_6"
            style="@style/Button_2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            android:text="@string/_minus"
            style="@style/Button_3"/>
    </TableRow>

    <TableRow
        style="@style/TableRow">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            android:text="@string/_7"
            style="@style/Button_2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            android:text="@string/_8"
            style="@style/Button_2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            android:text="@string/_9"
            style="@style/Button_2"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            android:text="@string/_plus"
            style="@style/Button_3"/>
    </TableRow>

    <TableRow
        style="@style/TableRow">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            android:text="@string/_0"
            android:layout_span="3"
            style="@style/Button_2"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_result"
            android:text="@string/_result"
            style="@style/Button_3"/>

    </TableRow>
    </TableLayout>
</TableLayout>